--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 <section style="height: 70vh">
   <span style="font-size: 140px;color: #ff0000;">404</span>
 <p>web Page Not Found! please go to home</p>  
-<button class="hus"><i class="bi bi-house-door"></i> Switch Home</button>
+<button onclick="window.location.href='https://nahidhk.info'" class="hus"><i class="bi bi-house-door"></i> Switch Home</button>
 </section>
 
 </center>
