--- a/ujobs/index.html
+++ b/ujobs/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
+
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+
+  <title>Nahid HK</title>
+
+  <!-- HTML -->
+
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
+  <main id="nav"></main>
 
+  <section>
+    <blockquote>
+
+      <form action="https://formsubmit.co/nahidhk2007@gmail.com" method="POST">
+        <label for="jobs">Apply You<n>*</n></label><br>
+        <input type="text" name="apply" id="jobs" value="Josps Department" required />
+        <br>
+        <label for="name">YourName<n>*</n></label><br>
+        <input placeholder="Enter YourName" type="text" name="name" id="name" value="" required />
+        <br>
+        <label for="email">YourEmail<n>*</n></label><br>
+        <input placeholder="you@exampule.domain" type="email" name="email" id="email" value="" required />
+
+        <br>
+        <label for="number">YourMobile Number<n>*</n></label><br>
+        <input placeholder="Enter YourNumber only +880" type="number" name="number" id="number" value="" required />
+        <label for="skill">YourSkills<n>*</n></label><br>
+        <input placeholder="skills,skills," type="text" 
+        name="skill"
+        id="skill"
+        value="" required />
+  <label for="cv">upload your CV<n>*</n></label><br>
+  <input placeholder="Enter YourName" type="file" name="cv" id="cv" value="" required />
+
+
+
+        <button class="hus" type="submit">Submit </button>
+
+
+      </form>
+
+    </blockquote>
+
+
+
+  </section>
+
+
+
+
+
+
+
+
+  <main id="foter"></main>
+
+
+  <!-- Project -->
+  <script src="/main.js"></script>
+  <script src="/nav.js"></script>
 </body>
 
 </html>
