--- a/ujobs/index.html
+++ b/ujobs/index.html
@@ -40,16 +40,21 @@
 
         <br>
         <label for="number">YourMobile Number<n>*</n></label><br>
-        <input placeholder="Enter YourNumber only +880" type="number" name="number" id="number" value="" required />
+        <input placeholder="Enter YourNumber only +880" type="number" name="number" id="number" value="" required /><br>
         <label for="skill">YourSkills<n>*</n></label><br>
         <input placeholder="skills,skills," type="text" 
         name="skill"
         id="skill"
-        value="" required />
+        value="" required /><br>
   <label for="cv">upload your CV<n>*</n></label><br>
   <input placeholder="Enter YourName" type="file" name="cv" id="cv" value="" required />
-
-
+<br>
+  <label for="addrees">Enter your Address<n>*</n></label><br>
+  <input placeholder="addrees" type="text" 
+  name="addrees"
+  id="addrees"
+  value="" required />
+<br>
 
         <button class="hus" type="submit">Submit </button>
 
