--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -19,22 +23,22 @@
 
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="random.css.css">
 </head>
 
 <body>
-  <main id="nav"></main>
+  <main class="animate__animated animate__bounceInDown" id="nav"></main>
 
 
 
 
 
   <section class="lofi">
-    <div class="logopro d1">
+    <div class="logopro d1 animate__flipInX animate__animated">
 
     </div>
 
-    <div class="logopro d2">
+    <div class="logopro d2 animate__animated animate__jello">
       <center>
         <br>
         <span class="title">Nahid HK</span>
