--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="random.css.css">
 </head>
 
 <body>
