--- a/404.html
+++ b/404.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -23,10 +28,11 @@
 </head>
 
 <body>
-  <main id="nav"></main>
+    <main class="animate__animated animate__zoomInRight" id="nav"></main>
+
 <center>
   
-<section style="height: 70vh">
+<section class="animate__animated animate__jackInTheBox" style="height: 70vh">
   <span style="font-size: 140px;color: #ff0000;">404</span>
 <p>web Page Not Found! please go to home</p>  
 <button onclick="window.location.href='https://nahidhk.info'" class="hus"><i class="bi bi-house-door"></i> Switch Home</button>
