--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-  <main class="animate__animated animate__bounceInDown" id="nav"></main>
+  <main class="animate__animated animate__zoomInRight" id="nav"></main>
 
 
 
