--- a/ujobs/index.html
+++ b/ujobs/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -19,7 +24,7 @@
 
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/random.css.css">
 </head>
 
 <body>
