--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-  
+  <meta name="theme-color" content="#4680ff" />
+
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
