--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   />
   
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
+<meta name="theme-color" content="#4680ff" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -85,7 +86,8 @@
 
 
 
-  <main id="foter"></main>
+  
+  <main class="animate__animated animate__flip" id="foter"></main>
 
 
   <!-- Project -->
