--- a/ues.html
+++ b/ues.html
@@ -2,7 +2,13 @@
 <html lang="en">
 
 <head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  
   <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
+<meta name="theme-color" content="#4680ff" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,11 +25,11 @@
 
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="random.css.css">
 </head>
 
 <body>
-  <main id="nav"></main>
+  <main class="animate__animated animate__zoomInRight" id="nav"></main>
 
 
 
@@ -31,10 +37,7 @@
 
 
 
-
-
-
-  <main id="foter"></main>
+  <main class="animate__animated animate__flip" id="foter"></main>
 
 
   <!-- Project -->
