--- a/ujobs/index.html
+++ b/ujobs/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="/img/logopro.png">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   
-  <link rel="shortcut icon" type="image/x-icon" href="img/logopro.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/logopro.png">
+<meta name="theme-color" content="#4680ff" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
