--- a/history/index.html
+++ b/history/index.html
@@ -31,12 +31,23 @@
   <main class="animate__animated animate__zoomInRight" id="nav"></main>
  
 
+<!-- This Is A our blogs code ---->
+<main class="row">
+ 
+  
+<section class="card">
+ <div class="img-box">
+   <img src="/project/gbssltd.png"/>
+ </div>
+ <br>
+ <div class="">
 
+</div>
 
+</section>
+  
 
-
-
-
+</main>
 
 
 
