--- a/history/index.html
+++ b/history/index.html
@@ -39,12 +39,106 @@
  <div class="img-box">
    <img src="/project/gbssltd.png"/>
  </div>
- <br>
- <div class="">
+ 
+ 
+  <div class="user-prof">
+    <img srcset="/user/nahid.png" src="/user/nahid.png" alt="নাহিদ এইচকে">
+    <div class="user-details">
+      <span class="outt">Posted By</span><br>
+      <Span style="font-size: 20px;color:#4680ff"><b>Nahid HK</b></span>
+<br>
+      <span class="outt">01/08/2023</span>
+    </div>
+  </div>
+<hr>
+<blockquote>
+  <h2>Gbssltd.site</h2>
+  <p class="datatype">The Site Name Grma Bangla Somoboy somoti This Website Has Been Sell me And Our
+  <a href="https://nahidhk.info">Nahid HK</a>
+  
+  Community site data
+  loaded by is a mamaun! Site sell in 
+  <a href="#">CloudHosting.com.bd</a> 
+  company . a company is a beter side opstion data seles iam  eran this site of total rank this sitt data save amir hamza electric company ! This data type ed by Nahid HK Softer lab</p>
+  
+  
+  
+  
+  
+</blockquote>
 
-</div>
+  
+  
+  <button class="hus ht">
+   <i class="bi bi-eye"></i>
+   Preview Site 
+  </button>
+  
+    <button class="hus ht">
+   <i class="bi bi-code-slash"></i>   
+   GitHub embed 
+  </button>
+<br><br>
+<center>
+  <button class="hus">
+<i class="bi bi-currency-dollar"></i>    Earn: <b>$107</b>
+  </button>
+</center>
 
 </section>
+  
+  
+  
+  
+  
+  
+  
+<section class="card">
+ <div class="img-box">
+   <img src="/project/rfc.png"/>
+ </div>
+ 
+ 
+  <div class="user-prof">
+    <img srcset="/user/nahid.png" src="/user/nahid.png" alt="নাহিদ এইচকে">
+    <div class="user-details">
+      <span class="outt">Posted By</span><br>
+      <Span style="font-size: 20px;color:#4680ff"><b>Nahid HK</b></span>
+<br>
+      <span class="outt">19/01/2024</span>
+    </div>
+  </div>
+<hr>
+<blockquote>
+  <h2>ReadyOfferCareer</h2>
+  <p class="datatype"> Website Details Is a GITHUB Page <a href="https://github.com/nahidhk/Landing-card">https://github.com/nahidhk/Landing-card</a></p>
+  
+  
+  
+  
+  
+</blockquote>
+
+  
+  
+  <button onclick="window.location.href='https://www.readyoffercareer.com/'" class="hus ht">
+   <i class="bi bi-eye"></i>
+   Live View Site 
+  </button>
+  
+    <button onclick="window.location.href='https://github.com/nahidhk/Landing-card'" class="hus ht">
+   <i class="bi bi-code-slash"></i>   
+   GitHub embed 
+  </button>
+<br><br>
+<center>
+  <button class="hus">
+<i class="bi bi-currency-dollar"></i>    Earn: <b>$00</b>
+  </button>
+</center>
+
+</section>
+
   
 
 </main>
